--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .red {
-  color: red;
+  color: firebrick;
 }
 
 .bold {
@@ -11,7 +11,7 @@
 }
 
 .App button {
-  background-color: green;
+  background-color: teal;
   color: white;
   font: inherit;
   border: 1px solid blue;
@@ -20,12 +20,12 @@
 }
 
 .App button:hover {
-  background-color: lightgreen;
+  background-color: aqua;
   color: black;
 }
 
 .App button.Red {
-  background-color: red;
+  background-color: firebrick;
 }
 
 .App button.Red:hover {
